Page System now working horizontally. Debug prints are still present